--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-pandas
-plotly-express
-plotly
-matplotlib
-seaborn
-scikit-learn
+streamlit == 1.31.1
+pandas == 2.2.0
+plotly-express == 0.4.1
+plotly == 5.19.0
+matplotlib == 3.8.3
+seaborn == 0.13.2
+scikit-learn == 1.4.1
